--- a/idex.html
+++ b/idex.html
@@ -27,8 +27,7 @@
 					<a class="mr-4 no-underline text-black hover:text-gey-darkest" href="#">
 						Login
 					</a>
-				</li>
-				<li>
+				
 					<a class="bg-black inline-block hover:bg-green-darker no-underline p-2 rounded text-white"href="#">
 						Register
 					</a>
@@ -36,6 +35,105 @@
 			</ul>
 		</nav>
 	</header>
+	<main class="container mx-auto px-4">
+
+	<!--IMAGE GRID-->
+<div class="flex flex-wrap -mx-4">
+	<!--Grid Cell-->
+
+
+ 	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
+ 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 	</div>
+  
+  	
+
+	<!--End grid cell-->
+	<!--Grid Cell-->
+
+
+ 	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
+ 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 	</div>
+  
+  	
+
+	<!--End grid cell-->
+	<!--Grid Cell-->
+
+
+ 	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
+ 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 	</div>
+  
+  	
+
+	<!--End grid cell-->
+	<!--Grid Cell-->
+
+
+ 	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
+ 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 	</div>
+  
+  	
+
+	<!--End grid cell-->
+	<!--Grid Cell-->
+
+
+ 	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
+ 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 	</div>
+  
+  	
+
+	<!--End grid cell-->
+	<!--Grid Cell-->
+
+
+ 	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
+ 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 	</div>
+  
+  	
+
+	<!--End grid cell-->
+	<!--Grid Cell-->
+
+
+ 	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
+ 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 	</div>
+  
+  	
+
+	<!--End grid cell-->
+	<!--Grid Cell-->
+
+
+ 	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
+ 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 	</div>
+  
+  	
+
+	<!--End grid cell-->
+
+	<!--Grid Cell-->
+
+
+ 	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
+ 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 	</div>
+  
+  	
+
+	<!--End grid cell-->
+</div>
+
+	<!--End IMAGE GRID-->
+</main>
 	
 </body>
 </html>
