--- a/idex.html
+++ b/idex.html
@@ -39,101 +39,154 @@
 
 	<!--IMAGE GRID-->
 <div class="flex flex-wrap -mx-4">
+	
 	<!--Grid Cell-->
 
-
  	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
- 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 		<article class="shadow-lg rounded">
+	 		<img alt="forest branches and leaves, out of focus just before sunset"  class="block h-auto w-full " src="https://picsum.photos/320/240?image=567"">
+	 		<header class="flex justify-between px-6 py-4">
+	 			<h5>Forest</h5>
+		    	<p class="text-grey-darkest text-base">
+			      4/10/18
+			    </p>
+		    </header>
+ 		</article>
  	</div>
   
-  	
-
 	<!--End grid cell-->
-	<!--Grid Cell-->
-
+<!--Grid Cell-->
 
  	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
- 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 		<article class="shadow-lg rounded">
+	 		<img alt="Wideshot of coulds and water reflection, two people standing in the bottom right far in the distance"  class="block h-auto w-full " src="https://picsum.photos/320/240?image=1056"">
+	 		<header class="flex justify-between px-6 py-4">
+	 			<h5>Clouds</h5>
+		    	<p class="text-grey-darkest text-base">
+			      4/17/18
+			    </p>
+		    </header>
+ 		</article>
  	</div>
   
-  	
-
 	<!--End grid cell-->
-	<!--Grid Cell-->
-
+<!--Grid Cell-->
 
  	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
- 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 		<article class="shadow-lg rounded">
+	 		<img alt="Multi colored soft circles camera wide open aperatrue "  class="block h-auto w-full " src="https://picsum.photos/320/240?image=56"">
+	 		<header class="flex justify-between px-6 py-4">
+	 			<h5>Circles</h5>
+		    	<p class="text-grey-darkest text-base">
+			      5/03/18
+			    </p>
+		    </header>
+ 		</article>
  	</div>
   
-  	
-
 	<!--End grid cell-->
-	<!--Grid Cell-->
-
+<!--Grid Cell-->
 
  	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
- 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 		<article class="shadow-lg rounded">
+	 		<img alt="birds eye view of people on a overcast day beach with film grain"  class="block h-auto w-full " src="https://picsum.photos/320/240?image=100"">
+	 		<header class="flex justify-between px-6 py-4">
+	 			<h5>Beach Day</h5>
+		    	<p class="text-grey-darkest text-base">
+			      5/12/18
+			    </p>
+		    </header>
+ 		</article>
  	</div>
   
-  	
-
 	<!--End grid cell-->
-	<!--Grid Cell-->
-
+<!--Grid Cell-->
 
  	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
- 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 		<article class="shadow-lg rounded">
+	 		<img alt="A grassy field in winter a mountain on the left in the distance metal fence posts without the fence"  class="block h-auto w-full " src="https://picsum.photos/320/240?image=66"">
+	 		<header class="flex justify-between px-6 py-4">
+	 			<h5>Snow on the Mountain Tops</h5>
+		    	<p class="text-grey-darkest text-base">
+			      5/19/18
+			    </p>
+		    </header>
+ 		</article>
  	</div>
   
-  	
-
 	<!--End grid cell-->
-	<!--Grid Cell-->
-
+<!--Grid Cell-->
 
  	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
- 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 		<article class="shadow-lg rounded">
+	 		<img alt="placeholder image"  class="block h-auto w-full " src="https://picsum.photos/320/240?image=26"">
+	 		<header class="flex justify-between px-6 py-4">
+	 			<h5>What's in my Bag</h5>
+		    	<p class="text-grey-darkest text-base">
+			      7/17/18
+			    </p>
+		    </header>
+ 		</article>
  	</div>
   
-  	
-
 	<!--End grid cell-->
-	<!--Grid Cell-->
-
+<!--Grid Cell-->
 
  	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
- 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 		<article class="shadow-lg rounded">
+	 		<img alt="placeholder image"  class="block h-auto w-full " src="https://picsum.photos/320/240?image=79"">
+	 		<header class="flex justify-between px-6 py-4">
+	 			<h5>Hiking Wideshot</h5>
+		    	<p class="text-grey-darkest text-base">
+			      8/03/18
+			    </p>
+		    </header>
+ 		</article>
  	</div>
   
-  	
-
 	<!--End grid cell-->
-	<!--Grid Cell-->
-
+<!--Grid Cell-->
 
  	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
- 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 		<article class="shadow-lg rounded">
+	 		<img alt="placeholder image"  class="block h-auto w-full " src="https://picsum.photos/320/240?image=211"">
+	 		<header class="flex justify-between px-6 py-4">
+	 			<h5>Sailboat at the Dock</h5>
+		    	<p class="text-grey-darkest text-base">
+			      8/08/18
+			    </p>
+		    </header>
+ 		</article>
  	</div>
   
-  	
-
 	<!--End grid cell-->
-
-	<!--Grid Cell-->
-
+<!--Grid Cell-->
 
  	<div class="w-full md:w-1/2 lg:w-1/3 py-4 px-4">
- 		<img alt="placeholder image"  class="block h-auto w-full" src="https://via.placeholder.com/320x240"">
+ 		<article class="shadow-lg rounded">
+	 		<img alt="placeholder image"  class="block h-auto w-full " src="https://picsum.photos/320/240?image=430"">
+	 		<header class="flex justify-between px-6 py-4">
+	 			<h5>View of the City from Sailboat</h5>
+		    	<p class="text-grey-darkest text-base">
+			      8/08/18
+			    </p>
+		    </header>
+ 		</article>
  	</div>
   
-  	
-
 	<!--End grid cell-->
-</div>
+
 
 	<!--End IMAGE GRID-->
 </main>
-	
+	<footer class="border-top m-4">
+		<div class="container mx-auto px-4">
+			<p>
+				<small>
+					Copyright &copy; 2019 Jerry Jones
+				</small>
+			</p>
+		</div>
+	</footer>
 </body>
 </html>
