Add  Paragraph and main image

--- a/idex.html
+++ b/idex.html
@@ -36,6 +36,13 @@
 		</nav>
 	</header>
 	<main class="container mx-auto px-4">
+		<img class="block h-auto w-full" src="https://picsum.photos/960/640?image=1056" alt="">
+
+		<p class="m-4 leading-normal px-4 py-4">
+			<strong>
+			Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit illum, quasi cum numquam debitis illo ut quos corrupti temporibus iure voluptatem magni aliquam vel pariatur impedit esse error, accusantium quisquam? Autem officia architecto nostrum repudiandae veritatis laborum laboriosam, voluptates, facere eligendi optio dolor, totam consectetur dicta illo ex debitis natus repellendus. Quos accusantium sunt, eius dicta praesentium labore odio nulla error delectus officia molestiae similique cumque itaque iste explicabo. Rerum nemo repellendus nesciunt doloremque perspiciatis tempore incidunt, quae unde, quas labore ducimus hic laudantium non ratione nisi id atque, aperiam laborum ea dolorem sapiente impedit blanditiis esse! Deleniti culpa ea facere voluptates natus minima, sint officia accusamus atque eaque earum autem cum aliquam laudantium veritatis voluptate pariatur ab repellat perferendis ipsum tempore vero, corporis sequi temporibus. Beatae, consequatur earum est. Natus quidem nam qui, architecto eveniet corporis, aliquam debitis provident et sapiente earum facere vel harum. Dolorum beatae sequi molestiae iste alias odio nam delectus, id earum cum libero, ea consequuntur eaque veniam, velit nulla reiciendis repellendus esse officia aperiam ipsum incidunt assumenda aut dolores! Itaque alias dolores doloribus labore numquam provident enim reprehenderit, rem non facere tempora eos iure voluptatem excepturi, beatae maiores quo quibusdam reiciendis corporis, architecto praesentium.
+			</strong>
+		</p>
 
 	<!--IMAGE GRID-->
 <div class="flex flex-wrap -mx-4">
